--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "split-digits"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 authors = ["Nils Feierabend <mztikk@outlook.de>"]
 repository = "https://github.com/mztikk/split-digits"
 license = "MIT"
 description = "library to parse and interpret poetic source code"
+
+[dev-dependencies]
+criterion = "0.3.5"
+
+[[bench]]
+name = "benchmarks"
+harness = false
